# cool-agent-canvas

./: .gitignore  README.md  SPEC.md  pyproject.toml
examples/crewai_basic/: crew.py
examples/langgraph_basic/: graph.py
src/agent_canvas/: __init__.py  cli.py  crewai_adapter.py  langgraph_adapter.py  server.py  storage.py  trace.py
static/: index.html
tests/: __init__.py  test_crewai_adapter.py  test_langgraph_adapter.py  test_server.py  test_storage_subscribe.py  test_trace.py
