[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-canvas"
version = "0.1.0"
description = "Visual canvas for designing, debugging, and tracing multi-agent workflows (LangGraph, CrewAI, AutoGen)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fuleinist" }]
keywords = ["agents", "langgraph", "multi-agent", "debugging", "tracing", "observability", "agent-canvas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "pydantic>=2.6",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
agent-canvas = "agent_canvas.cli:main"

[project.urls]
Homepage = "https://github.com/fuleinist/cool-agent-canvas"
Issues = "https://github.com/fuleinist/cool-agent-canvas/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"